<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_fragment"
        android:icon="@drawable/ic_home_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/transaction_list_fragment"
        android:icon="@drawable/ic_receipt_24dp"
        android:title="@string/transaction" />
    <item
        android:id="@+id/message_room_fragment"
        android:icon="@drawable/ic_inbox_24dp"
        android:title="@string/inbox" />
    <item
        android:id="@+id/favorite_fragment"
        android:icon="@drawable/ic_favorite_border_24dp"
        android:title="@string/favorite" />
    <item
        android:id="@+id/profile_fragment"
        android:icon="@drawable/ic_person_24dp"
        android:title="@string/profile" />
</menu>
